--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
+  "homepage": "http://caeldeth.github.io/react-portfolio",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.1",
